# education_cpp

./: .gitignore  NAMING_CONVENTION.md  README.md  all_tasks.md  collect_tasks.sh  rename_examples.sh
cmake_templates/: README.md
cpp_individual/: 1.cpp  2.cpp  3.cpp  4_revised.cpp  5.cpp  8.cpp  8_defence.cpp  CMakeLists.txt
cpp_lectures/: 7.cpp  7_filter_by_ascii_sum.cpp  7_symmetry.cpp
cpp_my_other_works/: 1.cpp
individual/: 10.cpp  10_defense.cpp  11.cpp  11_defense.cpp  12.cpp  13.cpp  13_defense.cpp  14.cpp  14_defense.cpp  4.cpp  5_defense.cpp  7_char.cpp  7_string.cpp  8.cpp  9.cpp  9_input.txt  9_s_1.cpp  tasks.md  v10.cpp  v14.cpp
lectures/: 7_symmetry.cpp  7_word_extraction.cpp
other_works/: 2.cpp  triangle_1.cpp  triangle_2.cpp
topic_10_structures/: t1.cpp  t11.cpp  t13.cpp  t1_s1.cpp  t1_s1.md  t3.cpp  t_1.cpp  t_1_s_1.cpp  t_1_s_1.md
topic_11_dynamic_data_structures_singly_linked_list/: t3.cpp
topic_12_doubly_linked_list/: code comprehension.cpp  t12.cpp  t13  t13.cpp  v3.cpp  v4.cpp  x1.cpp
topic_1_linear_algorithms/: t1_a.cpp  t6.cpp  t_13.cpp
topic_2_branching_algorithms/: t11.cpp  t14.cpp  t4.cpp  t_17.cpp
topic_4_arrays/: t12.cpp  t_2.cpp  t_6.cpp
topic_5_2d_arrays/: another_t_9_p_5.cpp  t_14.cpp  t_4.cpp  t_4_p_5_vesion_2.cpp  t_7.cpp
topic_9_file_operations/: 7.md  n_11.md  n_12.md  n_7.md  t1.cpp  t10.cpp  t10_s1.cpp  t11.cpp  t12.cpp  t2.cpp  t3.cpp  t3_s2.cpp  t4.cpp  t4_s2.cpp  t5.cpp  t6.cpp  t6_s1.cpp  t7.cpp  t7.md  t7_s2.cpp  t8.cpp  t9.cpp  t9_s1.cpp  t_1.cpp  t_10.cpp  t_10_s_1.cpp  t_11.cpp  t_12.cpp  t_2.cpp  (+12 more)
(+149 files in other folders)
